--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,6 +16,7 @@ ul, ol {
 }
 
 html {
+  width: 100vw;
   height: 100vh;
 }
 html body {
@@ -34,7 +35,7 @@ html body header {
 html body main {
   padding: 1rem;
   margin: auto;
-  max-width: 768px;
+  max-width: 1024px;
 }
 html body main #bemVindo {
   margin: 1rem 0;
@@ -64,9 +65,13 @@ html body main #oferta h2 {
   margin-bottom: 24px;
 }
 html body main #oferta #container {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 16px;
+  margin: 0 auto;
 }
 html body main #oferta #container .card {
   background-color: #f4f4f4;
@@ -75,7 +80,6 @@ html body main #oferta #container .card {
   border-radius: 0.5rem;
   display: flex;
   flex-direction: column;
-  margin: 24px 0;
 }
 html body main #oferta #container .card img {
   margin: 24px 24px 16px;
@@ -172,6 +176,31 @@ html body nav ul a {
 html body nav ul a i {
   font-size: 1.8rem;
   margin-bottom: 0.5rem;
+}
+
+@media only screen and (min-width: 768px) {
+  #container {
+    display: grid;
+    grid-template-columns: auto auto !important;
+    grid-template-rows: auto auto auto;
+    gap: 16px !important;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  #container {
+    display: grid;
+    grid-template-columns: auto auto auto !important;
+    grid-template-rows: auto auto auto;
+    gap: 16px !important;
+  }
+}
+@media only screen and (min-width: 1440px) {
+  #container {
+    display: grid;
+    grid-template-columns: auto auto auto auto !important;
+    grid-template-rows: auto auto auto;
+    gap: 16px !important;
+  }
 }
 
 /*# sourceMappingURL=styles.css.map */
