--- a/style.scss
+++ b/style.scss
@@ -215,19 +215,89 @@ html {
     gap: 16px !important;
   }
 }
+
 @media only screen and (min-width: 1024px) {
   #container {
     display: grid;
-    grid-template-columns: auto auto auto!important;
+    grid-template-columns: auto auto auto !important;
     grid-template-rows: auto auto auto;
     gap: 16px !important;
   }
 }
+
 @media only screen and (min-width: 1440px) {
   #container {
     display: grid;
-    grid-template-columns: auto auto auto auto!important;
+    grid-template-columns: auto auto auto auto !important;
     grid-template-rows: auto auto auto;
     gap: 16px !important;
+  }
+}
+
+main {
+  #simulador {
+    max-width: 568px;
+
+    h1 {
+      @include font.principal;
+      margin: 24px auto 40px;
+
+    }
+
+    .grupo {
+      margin: 18px auto;
+
+      label {
+        display: block;
+        width: 100%;
+        font-size: 18px;
+        margin: 4px auto;
+      }
+
+      input[type="number"] {
+        min-height: 32px;
+        width: 100%;
+        border-radius: 4px;
+        border: 1px solid transparent;
+        // margin: 0 auto;
+      }
+    }
+
+    .grupo {
+      button {
+        display: block;
+        min-height: 40px;
+        width: 164px;
+        margin: 40px auto 0;
+        border-radius: 4px;
+        border: 1px solid transparent;
+        color: cor.$roxo-01;
+
+      }
+    }
+
+    #valores {
+      margin: 24px auto 144px;
+
+      #container {
+        // background-color: aquamarine;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+        div {
+          h2 {}
+
+          ul {
+            list-style: none;
+
+            li:first-child {
+              display: none;
+            }
+          }
+        }
+      }
+    }
+
   }
 }
